gateway/manifests/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-gateway
  labels:
    app: op-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: op-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: op-gateway
    spec:
      containers:
        - name: op-gateway
          image: kaitan8110/op-gateway
          ports:
            - containerPort: 5001
