gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: op-gateway
spec:
  selector:
    app: op-gateway
  type: ClusterIP
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
